# artemis

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  genindex.html  index.html  objects.inv  run_local_ci.py  search.html  searchindex.js  temp_ci_script.slurm
.doctrees/: environment.pickle  index.doctree
.doctrees/src/: bcs.doctree  parameters.doctree  pgen.doctree  physics.doctree  running.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  nightly.yml
_sources/src/: parameters.rst.txt  pgen.rst.txt  running.rst.txt
_static/: collapse.js
analysis/: ahdf.py  ahistory.py  anbody.py  plot.py
doc/: Makefile  conf.py  index.rst
doc/_static/: artemis_style.css
doc/src/: bcs.rst  physics.rst  running.rst
env/: bash  compile_timing.sh
inputs/advection/: advection.in
inputs/blast/: blast.in  blast_amr.in
inputs/diffusion/: alpha_disk.in  conduction.in  gaussian_bump.in
inputs/disk/: binary_cyl.in  binary_nbody_cyl.in  cb_disk.in  disk_alpha.in  disk_axi.in  disk_cart.in  disk_collision.in  disk_cyl.in  disk_nbody_cyl.in  disk_sph.in
inputs/drag/: simple_drag.in
inputs/dust/: SI_strat1_amr_BA.in  SI_strat_AB.in  SI_strat_BA.in  disk_cyl_dust10.in  dust_coagulation.in  dust_coagulation_den.in  dust_collision.in
inputs/linwave/: linear_wave.in  linear_wave_amr.in
inputs/planet_inputs/: n20_sys.txt
inputs/radiation/: rad_beam.in  rad_shock.in  thermalization.in
inputs/ssheet/: ssheet.in
src/: CMakeLists.txt  artemis.cpp  artemis.hpp  artemis_driver.cpp  artemis_driver.hpp  artemis_params.yaml  bcs.html  main.cpp  parameters.html  parthenon_params.yaml  pgen.html  physics.html  running.html
src/bvals/: artemis_bvals.cpp
src/damping/: damping.cpp  damping.hpp
src/derived/: fill_derived.cpp  fill_derived.hpp
src/drag/: drag.cpp  drag.hpp  params.yaml
src/dust/: coagulation.hpp  dust.cpp  dust.hpp  params.yaml
src/dust/coagulation/: coagulation.cpp  coagulation.hpp
src/gas/: gas.cpp  gas.hpp  params.yaml
src/gas/cooling/: beta_cooling.cpp  cooling.cpp  cooling.hpp
src/geometry/: axisymmetric.hpp  cylindrical.hpp  geometry.hpp  spherical.hpp
src/geometry/test/: test_spherical.cpp
src/gravity/: binary_mass.cpp  gravity.cpp  gravity.hpp  nbody_gravity.hpp  params.yaml  point_mass.cpp  uniform.cpp
src/nbody/: nbody.cpp  nbody.hpp  nbody_advance.cpp  nbody_extras.cpp  nbody_outputs.cpp  nbody_setup.cpp  nbody_utils.hpp  params.yaml  particle_base.hpp
src/pgen/: SI_strat.hpp  advection.hpp  beam.hpp  blast.hpp  conduction.hpp  constant.hpp  disk.hpp  dust_coagulation.hpp  dust_collision.hpp  gaussian_bump.hpp  linear_wave.hpp  nu_disk.hpp  params.yaml  pgen.hpp  problem_modifier.hpp  shock.hpp  strat.hpp  thermalization.hpp
src/radiation/imc/: imc.hpp  jaybenne_params.yaml
src/radiation/moment/: matter_coupling.hpp  radiation.cpp  radiation.hpp
src/rotating_frame/: params.yaml  rotating_frame.cpp  rotating_frame.hpp  rotating_frame_impl.hpp
src/sts/: sts.cpp  sts.hpp
src/utils/: artemis_utils.cpp  artemis_utils.hpp  history.hpp  units.cpp  units.hpp
src/utils/diffusion/: diffusion.hpp  diffusion_coeff.hpp  momentum_diffusion.hpp  thermal_diffusion.hpp
src/utils/eos/: eos.hpp
src/utils/fluxes/: fluid_fluxes.hpp
src/utils/fluxes/reconstruction/: pcm.hpp  plm.hpp  ppm.hpp  reconstruction.hpp
src/utils/fluxes/riemann/: hllc.hpp  hlle.hpp  llf.hpp  riemann.hpp
src/utils/integrators/: artemis_integrator.hpp
src/utils/opacity/: opacity.hpp
src/utils/refinement/: amr_criteria.hpp  prolongation.hpp  restriction.hpp
style/: format.sh
tst/: CMakeLists.txt  ci_runner.py  ci_runner.slurm  launch_ci_runner.py  run_local_ci.py  run_tests.py  run_unit_tests.py  unit_test_utils.hpp
tst/scripts/advection/: advection.py  advection_mpi.py
tst/scripts/binary/: binary.py  binary_mpi.py
tst/scripts/binary_adi/: binary_adi.py  binary_adi_mpi.py
tst/scripts/collisions/: collisions.py  collisions_mpi.py
tst/scripts/coords/: blast.py  blast_mpi.py
tst/scripts/diffusion/: alpha_disk.py  alpha_disk_mpi.py  thermal_diffusion.py  thermal_diffusion_mpi.py  viscous_diffusion.py  viscous_diffusion_mpi.py
tst/scripts/disk/: disk.py  disk_mpi.py
tst/scripts/disk_nbody/: disk_nbody.py  disk_nbody_mpi.py
tst/scripts/drag/: drag.py  drag_mpi.py
tst/scripts/hydro/: linwave.py  linwave_mpi.py
tst/scripts/nbody/: nbody.py  nbody_mpi.py
tst/scripts/ssheet/: ssheet.py  ssheet_mpi.py
tst/scripts/utils/: analysis.py  artemis.py  log_pipe.py
tst/suites/: gpu.suite  parallel.suite  parallel_slow.suite  regression.suite  serial.suite
tst/unit/: CMakeLists.txt  main.cpp
